# react-redux-jira

./: Dockerfile.react  docker-compose.yml
api/: db.sqlite3  pyproject.toml
api/api/: admin.py  models.py  serializers.py  urls.py  views.py
api/api/migrations/: 0001_initial.py  0002_auto_20210209_2318.py  0003_auto_20210212_2244.py  0004_auto_20210218_2236.py
api/jira_api/: settings.py
frontend/: .gitignore  package.json
frontend/public/: index.html
frontend/src/: App.module.css  App.tsx  index.tsx
frontend/src/app/: store.ts
frontend/src/features/: types.ts
frontend/src/features/auth/: Auth.tsx  authSlice.ts
frontend/src/features/task/: TaskDisplay.tsx  TaskForm.tsx  TaskList.tsx  taskSlice.ts
